--- a/prices.html
+++ b/prices.html
@@ -4,16 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/prices.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Sobre nós</title>
-    <style>
-        body{
-            background: url(https://static.vecteezy.com/ti/vetor-gratis/p1/23372938-abstrato-suave-borrao-azul-malha-cor-gradiente-efeito-fundo-para-grafico-projeto-elemento-vetor.jpg) no-repeat;
-            background-size: cover;
-            background-position: center center;
-        }
-    </style>
+    <title>Preços</title>
 </head>
 <body>
     <main>
