atualizacao de nome e input

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -30,7 +30,7 @@
 
             <div class="container-creator">
                 <div class="squad">
-                    <h3>Gabrieli Granado</h3>
+                    <h3>Gabriela Granado</h3>
                     <h5>Função: Designer da Apresentação</h5>
                 </div>
                 
